@@ -1,5 +1,9 @@
 1.9.11 - 2018-XX-XX
 
+  1. Changed the default value of `fs.gs.path.encoding` to 'uri-path', the new
+     codec introduced in 1.4.5. The old behavior can be restored by setting
+     `fs.gs.path.encoding` to 'legacy'.
+
 
 1.9.10 - 2018-11-01
 
